src/test/deca/codegen/invalid/operator_not_on_it.deca
// Operator not on int and not on boolean

{
    boolean bool = !5;
}